--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play The Case of the Vanishing Hair (and Other Hairy Theories).</tw-noscript></noscript></tw-story>
 <tw-storydata name="The Case of the Vanishing Hair (and Other Hairy Theories)" startnode="1" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="F837A18E-B700-45A6-8D07-68BAC19CDDDA" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Page 1" tags="" position="875,350" size="100,100">The Case of the Vanishing Hair (and Other Hairy Theories)
 
-&lt;img src=&quot;https://github.com/SholtoD/Vanishing-Hair-Twine/blob/main/cover_page.png&quot; alt=&quot;cover page of boy with magnifying glass inspecting his fathers bald head&quot; width=&quot;500&quot; height=&quot;600&quot;&gt;
+<img src="https://github.com/SholtoD/Vanishing-Hair-Twine/blob/main/cover_page.png" alt="page of boy with magnifying glass inspecting his fathers bald head" width="500" height="600">
 
 Something strange is going on above my father&#39;s brow
 It seems his hair has disappeared... but why, and where, and how?
