--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ But up on top, it&#39;s slowly going...
 
 </tw-passagedata><tw-passagedata pid="2" name="Page 4" tags="" position="525,600" size="100,100">The Belly Button Burglar Theory
 
-&lt;img src=&quot;\\wlgprdfile12\home$\Wellington\duncans\homedata\Desktop\Twine Game\belly_button_theory.png&quot; alt=&quot;cover page of boy with magnifying glass inspecting his fathers bald head&quot; width=&quot;500&quot; height=&quot;600&quot;&gt;
+<img src="belly_button_theory.png" alt="image of belly button lint">
 
 Theres always some fuzz in Dads belly cave
 But Ive got none, and neither does Maeve.
@@ -40,8 +40,7 @@ Though I still dont know why it has a blue tint!
 
 Want to try out another [[Hairy Theory?|Page 3]]</tw-passagedata><tw-passagedata pid="3" name="Page 3" tags="" position="850,475" size="100,100">Select a Hairy Theory
 
-&lt;img src=&quot;\\wlgprdfile12\home$\Wellington\duncans\homedata\Desktop\Twine Game\theories.png&quot; alt=&quot;cover page of boy with magnifying glass inspecting his fathers bald head&quot; width=&quot;500&quot; height=&quot;600&quot;&gt;
-
+<img src="theories.png" alt="image of four theories">
 [[The Belly Button Burglar Theory|Page 4]]
 [[The Benjamin Button Theory|Page 6]]
 [[The Great Ape Theory|Page 5]]
@@ -49,7 +48,7 @@ Want to try out another [[Hairy Theory?|Page 3]]</tw-passagedata><tw-passagedata
 
 [[I&#39;m all theoried out!|Page 8]]</tw-passagedata><tw-passagedata pid="4" name="Page 5" tags="" position="700,600" size="100,100">The Great Ape Theory
 
-&lt;img src=&quot;\\wlgprdfile12\home$\Wellington\duncans\homedata\Desktop\Twine Game\great_ape_theory.png&quot; alt=&quot;cover page of boy with magnifying glass inspecting his fathers bald head&quot; width=&quot;500&quot; height=&quot;600&quot;&gt;
+<img src="great_ape_theory.png" alt="image of dad as a gorilla">
 
 Although Dads hair is on an outing,
 His back and chest are clearly sprouting.
@@ -62,8 +61,7 @@ But their close resemblance leaves some debate!
 
 Want to try out another [[Hairy Theory?|Page 3]]</tw-passagedata><tw-passagedata pid="5" name="Page 6" tags="" position="850,600" size="100,100">The Benjamin Button Theory
 
-&lt;img src=&quot;\\wlgprdfile12\home$\Wellington\duncans\homedata\Desktop\Twine Game\benjamin_button_theory.png&quot; alt=&quot;cover page of boy with magnifying glass inspecting his fathers bald head&quot; width=&quot;500&quot; height=&quot;600&quot;&gt;
-
+<img src="benjamin_button_theory.png" alt="image of dad as a baby with a moustache">
 When I was born, I was bald as a coot
 And Dad had oodles of hair to boot.
 It might sound absurd, but maybe, just maybe
@@ -75,7 +73,7 @@ And a baby with a mo? Well, thats perverse!
 
 Want to try out another [[Hairy Theory?|Page 3]]</tw-passagedata><tw-passagedata pid="6" name="Page 7" tags="" position="1000,600" size="100,100">The Birds Nest Theory
 
-&lt;img src=&quot;\\wlgprdfile12\home$\Wellington\duncans\homedata\Desktop\Twine Game\birdsnest_theory.png&quot; alt=&quot;cover page of boy with magnifying glass inspecting his fathers bald head&quot; width=&quot;500&quot; height=&quot;600&quot;&gt;
+<img src="birdsnest_theory.png" alt="image of bird in nest with hair in its beak">
 
 You may have heard its a curious claim
 That uncombed hair makes a nest fair game.
